--- a/hbo-react/src/style.global.css
+++ b/hbo-react/src/style.global.css
@@ -158,3 +158,18 @@ section {
     margin: 80px;
     gap: 40px;
 }
+
+/* Custom Scroll */
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: var(--tertiary-color);
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--secondary-color);
+  }
