--- a/hbo-react/src/css/signin.module.css
+++ b/hbo-react/src/css/signin.module.css
@@ -29,19 +29,19 @@ body {
     padding: 40px;
   }
   
-  .login-title {
+  .logintitle {
     letter-spacing: 2px;
     text-transform: uppercase;
     font-size: 1.25rem;
     margin-bottom: 24px;
   }
   
-  .login-label {
+  .loginlabel {
     text-align: left;
   }
 
   
-.login-field {
+.loginfield {
     background: var(--form-field-bg-color);
     border: var(--form-field-border);
     border-radius: 8px;
@@ -50,20 +50,20 @@ body {
     font-size: 1rem;
   }
   
-  .login-field::placeholder {
+  .loginfield::placeholder {
     color: var(--form-field-placeholder);
   }
   
-  .login-field:invalid {
+  .loginfield:invalid {
     border-color: var(--form-field-error);
   }
   
-  .login-actions {
+  .loginactions {
     margin-top: 24px;
     text-align: left;
   }
   
-  .login-link {
+  .loginlink {
     color: var(--link-color);
     text-decoration: none;
     margin-left: 24px;
@@ -77,12 +77,12 @@ body {
       height: auto;
     }
   
-    .login-actions .button {
+    .loginactions .button {
       display: block;
       margin-bottom: 24px;
     }
   
-    .login-link {
+    .loginlink {
       margin: 0;
     }
   }
