--- a/hbo-react/src/styles.global.css
+++ b/hbo-react/src/styles.global.css
@@ -52,11 +52,6 @@ section {
     scroll-margin-top: 80px;   /*controlar o enquadramento do scroll */
 }
 
-.text-small {
-    font-size: 1rem;
-    font-weight: 300;
-}
-
 .button {
     background-color: var(--tertiary-color);
     border-radius: 500px;
@@ -70,14 +65,17 @@ section {
     text-decoration: none;
 }
 
-.button.button-gradient {
+.button .buttonGradient {
     background-color: transparent;
     background-position: 100%;
     outline: 2px solid var(--secondary-color);
     transform: scale(1.05);
+} 
+.headerButton { 
+    animation: wiggle 2.2s linear infinite;
 }
 /* navbar */
-.menu {
+/* .menu {
     background-color: var(--nav-bg-color);
     padding: 12px 16px;
     display: flex;
@@ -87,10 +85,10 @@ section {
     top: 0;
     position: fixed;
     width: 100%;
-    /* z-index: 1; */
-}
+    z-index: 1; 
+}*/
 
-.menu-logo {
+/*.menu-logo {
     max-width: 160px;
 }
 
@@ -107,7 +105,7 @@ section {
     text-transform: uppercase;
     letter-spacing: 3px;
 }
-
+*/
 .menu-item-button {
     padding: 8px 26px;
     transition: background 1s, color 1s;
@@ -116,20 +114,13 @@ section {
 .menu-item-button:hover {
     background-color: var(--btn-link-bg-color);
     color: var(--btn-link-color);
-}
+} 
 
 /* container */
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 24px;
-    text-align: center;
-}
-
 /* footer */
 
-.footer-link {
+/* .footer-link {
     font-family: 'raleway', sans-serif;
     font-weight: bold;
     color: var(--link-color);
@@ -157,4 +148,4 @@ section {
     justify-content: center;
     margin: 80px;
     gap: 40px;
-}
+} */
