--- a/hbo-react/src/components/signin.module.css
+++ b/hbo-react/src/components/signin.module.css
@@ -6,7 +6,7 @@ body {
     color: var(--text-color);
   }
  
-  /* Peguei do styles.global */
+  /* Peguei do styles.global, da Footer */
 
   .container {
     max-width: 1200px;
@@ -14,6 +14,38 @@ body {
     padding: 24px;
     text-align: center;
 }
+
+
+.footer-link {
+  font-family: 'raleway', sans-serif;
+  font-weight: bold;
+  color: var(--link-color);
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 0 14px;
+  letter-spacing: 2px;
+  font-size: 0.875rem;
+  transition: color 0.5s;
+}
+
+.footer-link:hover {
+  color: var(--text-color);
+}
+
+.footer-legal {
+  font-size: 0.75rem;
+  color: var(--link-color);
+  margin: 0 16px;
+}
+
+.footer-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 80px;
+  gap: 40px;
+}
+
   /* Peguei do styles.global */
 
   .content {
@@ -99,7 +131,7 @@ body {
   }
 
 
-  /* Peguei do style.global */
+  /* Peguei do styles.global, button da Principal */
 
 .button {
   background-color: var(--tertiary-color);
