ainda não consegui linkar o SignIn com a header e nav

--- a/hbo-react/src/css/nav.module.css
+++ b/hbo-react/src/css/nav.module.css
@@ -1,4 +1,4 @@
-@import url('../styles.global.css'); 
+@import url('../style.global.css'); 
 .menu {
     background-color: var(--nav-bg-color);
     padding: 12px 16px;
